# Omon_LOGISTICS

./: .gitignore  Dockerfile  READINESS.md  README.md  docker-compose.yml  docker_helper.bat  entrypoint.sh  pyproject.toml  requirements-local.txt  requirements.txt  run_local.bat  run_local.ps1
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
audit/: admin.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
clients/: admin.py  models.py  serializers.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_deleted_at_client_is_deleted.py
common/: models.py
config/: settings.py  urls.py
dashboard/: urls.py  views.py
drivers/: admin.py  models.py  serializers.py  urls.py  views.py
drivers/migrations/: 0001_initial.py  0002_driver_card_last4_driver_deleted_at_and_more.py
nginx/: default.conf
notifications/: admin.py  models.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_assigned_at_order_deleted_at_and_more.py
payouts/: admin.py  models.py  serializers.py  urls.py  views.py
payouts/migrations/: 0001_initial.py  0002_alter_payout_unique_together.py
telegram_bot/: models.py  services.py
telegram_bot/handlers/: customer_handlers.py  driver_handlers.py  user_handlers.py
telegram_bot/keyboards/: keyboards.py
vehicles/: admin.py  models.py  serializers.py  urls.py  views.py
(+7 files in other folders)
